--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -12,6 +12,8 @@
 	<td> <%= a.description %>  </td>
 	<td> <%= link_to "Edit", edit_article_path(a) %> </td>
 	<td> <%= link_to "show", article_path(a) %> </td>
+	<td> <%= link_to "Delete", article_path(a), method: :delete, data: { confirm: "Are you sure ?"} %> </td>
+
 </tr>
 <% end %>
 </table>
