--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,19 @@
-<h1 align="center"> Welcome to <%= @user.username %>'s page' </h1>
+<h1 align="center"> Welcome to <%= @user.username %>'s page </h1>
 <div class = "row">
-	<div class=" col-md-6 col-md-offset-5 center">
+	<div class=" col-md-6 col-md-offset-6 center">
 		<%= gravatar_for @user, size: 150 %>
 	</div>
 </div>
 
 <h4 align="center"> <%= @user.username %>'s articles</h4>
-
+<div class=" col-md-6 col-md-offset-5 center">
+		<%= will_paginate @user_articles, renderer: BootstrapPagination::Rails %>
+	</div>
 <%= render 'articles/article', obj: @user.articles %> 
 
+<div class=" col-md-6 col-md-offset-5 center">
+		<%= will_paginate @user_articles, renderer: BootstrapPagination::Rails %>
+	</div>
 
 
 
