--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,14 +1,18 @@
-<%= form_for @article do |f| %>
-	<p>
-		<%= f.label :title %>
-		<%= f.text_field :title %>
-	</p>
-	<p>
-		<%= f.label :description %>
-		<%= f.text_area :description %>
-	</p>
+<div class ="container">
+<%= form_for @article, html: {class: "form"} do |f| %>
+	<div class="form-group row">
+		<%= f.label :title, class: "col-sm-2 col-form-label" %>
+		<%= f.text_field :title, class: "form-control" %>
+	</div>
+	<div class="form-group row">
+		<%= f.label :description, class: "col-sm-2 col-form-label" %>
+		<%= f.text_area :description,  class: "form-control" %>
+	</div>
 
 	<%= f.submit %>
 
 
 <% end %>
+</div>
+
+
