--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,19 +1,24 @@
-<%= form_for @user do |f| %>
-	<p>
-		<%= f.label :username %>
-		<%= f.text_field :username %>
-	</p>
-	<p>
-		<%= f.label :email %>
-		<%= f.email_field :email %>
-	</p>
-
-	<p>
-		<%= f.label :password %>
-		<%= f.password_field :password %>
-	</p>
+<div class ="container">
+<%= form_for @user, html: {class: "form"} do |f| %>
+	<div class="form-group row">
+		<%= f.label :username, class: "col-sm-2 col-form-label" %>
+		<%= f.text_field :username, class: "form-control" %>
+	</div>
+	<div class="form-group row">
+		<%= f.label :email, class: "col-sm-2 col-form-label" %>
+		<%= f.email_field :email, class: "form-control" %>
+	</div>
+	<div class="form-group row">
+		<%= f.label :password, class: "col-sm-2 col-form-label" %>
+		<%= f.password_field :password, class: "form-control" %>
+	</div>
 
 	<%= f.submit( @user.new_record? ? "Sign up" : "Update User") %>
 
 
 <% end %>
+</div>
+
+
+
+
