--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,20 +1,28 @@
-<h1 align="center" > List of Users </h1>
+<h1 class = "col-md-6 col-md-offset-5 center" >  Users List </h1>
 
-<div class = "col-md-6 col-md-offset-5 center">
-	<%= will_paginate @users, renderer: BootstrapPagination::Rails %>
+<div class=" col-md-6 col-md-offset-5 center">
+	<div class="row">
+		<%= will_paginate @users, renderer: BootstrapPagination::Rails %>
+	</div>
 </div>
+<div class="row">
+	</div>
 <%= @users.each do |user| %>
 	<div class="jumbotron">
-		<div class="container">
-			<div class="row col-md-6 col-md-offset-5 center">
-			<%= link_to gravatar_for(user), user_path(user) %>
+		<div class="row">
+			<div class ="col-md-6 col-md-offset-5 center">
+				<%= link_to gravatar_for(user), user_path(user) %>
+			</div>
+			<div class ="col-md-6 col-md-offset-5 center">
 				<h3> <%= link_to user.username, user_path(user) %> </h3>
 			</div>
-  			</div>
 		</div>
+  		
 	</div>
 <% end %>
-<div class = "col-md-6 col-md-offset-5 center">
-	<%= will_paginate @users, renderer: BootstrapPagination::Rails %>
-</div>
+<div class=" col-md-6 col-md-offset-5 center">
+	<div class="row">
+		<%= will_paginate @users, renderer: BootstrapPagination::Rails %>
+	</div>
+</div
 
