--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,13 +4,14 @@
       <%= link_to "Alpha Blogger", root_path, class: 'navbar-brand' %>
     </div>
     <ul class='nav navbar-nav'>
-      <li> <%= link_to "Sign Up", signup_path %></li>
-      <%# if user_signed_in? %>
+      <li> <%= link_to "Users", users_path %></li>
+      <% if logged_in? %>
         <li> <%= link_to "Log out", logout_path, method: :delete %></li>
         <li> <%= link_to "New Artice", new_article_path %></li>
-        <li> <%= link_to "Users", users_path %></li>
-      <%# else %>
-        <li> <%= link_to "Sign in", login_path %></li>
-      <%# end %>
+        
+      <% else %>
+        <li> <%= link_to "Log in", login_path %></li>
+        <li> <%= link_to "Sign Up", signup_path %></li>
+      <% end %>
   </div>
 </div> 
