--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,11 +1,15 @@
 <div class="jumbotron">
 	<div class="row">
 		<h3 align="center"> <%= @article.title %> </h3> 
+		<h4><small> Created by : <%= @article.user.username %> , 
+ 							<%= time_ago_in_words(@article.created_at) %> ago	</h4>
+		<hr />
 	</div>
 	<div class="row">
-		<p> <%= @article.description %> </p>	
-		<%= link_to "Edit", edit_article_path(@article), class: "btn btn-primary" %>
-		<%= link_to "Delete", article_path(@article), method: :delete, data: { confirm: "Are you sure ?"}, class: "btn btn-primary" %>
-		<%#= link_to "Home", articles_path, class: "btn btn-primary" %>
+		<p> <%= @article.description %> </p>
+		<% if logged_in? && current_user == @article.user_id %>	
+			<%= link_to "Edit", edit_article_path(@article), class: "btn btn-primary" %>
+			<%= link_to "Delete", article_path(@article), method: :delete, data: { confirm: "Are you sure ?"}, class: "btn btn-primary" %>
+		<% end %>
 	</div>
 </div>
