--- a/app/views/shared/_flash_messages.html.erb
+++ b/app/views/shared/_flash_messages.html.erb
@@ -1,3 +1,5 @@
 <% flash.each do |key, value| %>
-        <div class="alert alert-<%= key %>"><%= value %></div>
+        <div id="flash_div" class="alert alert-<%= key %>">
+        	<%= value %>
+        </div>
 <% end %>
