--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,7 +7,7 @@
 	</div>
 	<div class="row">
 		<p> <%= @article.description %> </p>
-		<% if logged_in? && current_user == @article.user_id %>	
+		<% if logged_in? && ( current_user == @article.user_id || current_user.admin? ) %>	
 			<%= link_to "Edit", edit_article_path(@article), class: "btn btn-primary" %>
 			<%= link_to "Delete", article_path(@article), method: :delete, data: { confirm: "Are you sure ?"}, class: "btn btn-primary" %>
 		<% end %>
