--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -18,7 +18,7 @@
   								<a class="btn btn-primary" href="<%= edit_article_path(a) %>" role="button">Edit the Article</a>
   							<% end %>
   							<a class="btn btn-primary" href="<%= article_path(a) %>" role="button">View the Article</a>
-  							<% if logged_in? && current_user == a.user_id %>
+  							<% if logged_in? && (current_user == a.user_id || current_user.admin?) %>
   								<%= link_to "Delete", article_path(a), method: :delete, data: { confirm: "Are you sure you want to delete this ?"}, 
   								class: "btn btn-primary" %>
   							<% end %>
