--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -15,9 +15,10 @@
 			</div>
 			<div class ="col-md-6 col-md-offset-5 center">
 				<h3> <%= link_to user.username, user_path(user) %> </h3>
+				<h3><small><%= pluralize(user.articles.count, "article") if user.articles %></small></h3>
+				<%= link_to "Delete User", user_path(user), method: :delete, data: { confirm: "Are you sure you want to delete this user and articles belongs to this user ?"} if can_delete_user? and (logged_in? and current_user.admin?) %>
 			</div>
 		</div>
-  		
 	</div>
 <% end %>
 <div class=" col-md-6 col-md-offset-5 center">
