--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,6 +9,7 @@
 <div class=" col-md-4 col-md-offset-4 center">
 		<%= will_paginate @user_articles, renderer: BootstrapPagination::Rails %>
 	</div>
+	<div class="row"></div>
 <%= render 'articles/article', obj: @user.articles %> 
 
 <div class=" col-md-6 col-md-offset-4 center">
