adding mvc for category

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -27,3 +27,8 @@ hr {
     margin: 1em 0;
     padding: 0;
 }
+
+.remove-extra-padding {
+	padding-top: 2px !important;
+	padding-bottom: 2px !important;
+}
