--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,4 @@
-<div class="jumbotron">
+<div class="jumbotron remove-extra-padding">
 	<div class="row">
 		<h3 align="center"> <%= @article.title %> </h3> 
 		<h4><small> Created by : <%= @article.user.username %> , 
