--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,5 +1,5 @@
 <% if obj.errors.any? %>
-	<div class="jumbotron">
+	<div class="jumbotron remove-extra-padding">
 		<h1 class="center">The form contains <%= pluralize(obj.errors.count, "error") %>.</h1>
 	</div>
 	<ul>
