--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,15 +1,15 @@
 <div class ="container">
 <%= form_for @user, html: {class: "form"} do |f| %>
 	<div class="form-group row">
-		<%= f.label :username, class: "col-sm-2 col-form-label" %>
+		<%= f.label :username %>
 		<%= f.text_field :username, class: "form-control" %>
 	</div>
 	<div class="form-group row">
-		<%= f.label :email, class: "col-sm-2 col-form-label" %>
+		<%= f.label :email %>
 		<%= f.email_field :email, class: "form-control" %>
 	</div>
 	<div class="form-group row">
-		<%= f.label :password, class: "col-sm-2 col-form-label" %>
+		<%= f.label :password %>
 		<%= f.password_field :password, class: "form-control" %>
 	</div>
 
