--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,7 +8,7 @@
 <div class="row">
 	</div>
 <%= @users.each do |user| %>
-	<div class="jumbotron">
+	<div class="jumbotron remove-extra-padding">
 		<div class="row">
 			<div class ="col-md-6 col-md-offset-5 center">
 				<%= link_to gravatar_for(user), user_path(user) %>
