--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -14,11 +14,12 @@
  							<%= time_ago_in_words(a.created_at) %> ago,
  							Last updated: <%= time_ago_in_words(a.updated_at) %> ago </small>
 						<div>
-							<% if logged_in? && ( current_user == a.user_id || current_user.admin? ) %>
+							<% if logged_in? && ( current_user.id == a.user_id || current_user.admin? ) %>
   								<a class="btn btn-primary" href="<%= edit_article_path(a) %>" role="button">Edit the Article</a>
   							<% end %>
   							<a class="btn btn-primary" href="<%= article_path(a) %>" role="button">View the Article</a>
-  							<% if logged_in? && (current_user == a.user_id || current_user.admin?) %>
+
+  							<% if logged_in? && (current_user.id == a.user_id || current_user.admin?) %>
   								<%= link_to "Delete", article_path(a), method: :delete, data: { confirm: "Are you sure you want to delete this ?"}, 
   								class: "btn btn-primary" %>
   							<% end %>
