--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -8,10 +8,12 @@
 		<%= f.label :description %>
 		<%= f.text_area :description,  class: "form-control" %>
 	</div>
-
+	<div class="form-group row">
+		<%= f.collection_check_boxes :category_ids, Category.all, :id, :name do |cb| %>
+			<% cb.label(class: "checkbox-inline input_checkbox") {cb.check_box(class: "checkbox") + cb.text} %>
+		<% end %>
+	</div>
 	<%= f.submit %>
-
-
 <% end %>
 </div>
 
