--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,15 +1,16 @@
-<div class="jumbotron remove-extra-padding">
+<!-- <div class="jumbotron remove-extra-padding">
 	<div class="row">
 		<h3 align="center"> <%= @category.name %> </h3> 
 	</div>
 </div>
-<div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    Dropdown button
-  </button>
-  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-    <a class="dropdown-item" href="#">Action</a>
-    <a class="dropdown-item" href="#">Another action</a>
-    <a class="dropdown-item" href="#">Something else here</a>
-  </div>
-</div>
+ -->
+
+
+ <h1 align="center"><%= "Category: " + @category.name %></h1>
+	<div align="center">
+		<%= will_paginate @category_articles %>
+	</div>
+	<%= render 'articles/article', obj: @category_articles %>
+	<div align="center">
+		<%= will_paginate @category_articles %>
+	</div>
